Add codebuild repository

--- a/group_vars/production/vars.yml
+++ b/group_vars/production/vars.yml
@@ -12,3 +12,4 @@ config_ecr_repos:
   dockerproductionaws/microtrader-quote: {}
   dockerproductionaws/squid: {}
   dockerproductionaws/ntp: {}
+  dockerproductionaws/codebuild: {}
