Add microtrader specs repository

--- a/group_vars/production/vars.yml
+++ b/group_vars/production/vars.yml
@@ -10,6 +10,7 @@ config_ecr_repos:
   dockerproductionaws/microtrader-dashboard: {}
   dockerproductionaws/microtrader-portfolio: {}
   dockerproductionaws/microtrader-quote: {}
+  dockerproductionaws/microtrader-specs: {}
   dockerproductionaws/squid: {}
   dockerproductionaws/ntp: {}
   dockerproductionaws/codebuild:
