--- a/group_vars/production/vars.yml
+++ b/group_vars/production/vars.yml
@@ -1,18 +1,16 @@
 ### Production environment settings
 
 # STS role and target account
-sts_role_arn: arn:aws:iam::543279062384:role/admin
+Sts.Role: arn:aws:iam::543279062384:role/admin
 
 # ECR Repositories
-config_ecr_repos:
+Config.Repositories:
   dockerproductionaws/microtrader-base: {}
   dockerproductionaws/microtrader-audit: {}
   dockerproductionaws/microtrader-dashboard: {}
   dockerproductionaws/microtrader-portfolio: {}
   dockerproductionaws/microtrader-quote: {}
-  dockerproductionaws/microtrader-specs: {}
   dockerproductionaws/squid: {}
-  dockerproductionaws/ntp: {}
   dockerproductionaws/codebuild:
-    ro_services:
+    ReadOnlyServices:
       - codebuild.amazonaws.com
